package it.progettiS.entities;

public class Board {
}
