package it.progettiS.entities;

public class Game {
}
