package it.progettiS.entities;

public class HumanPlayer extends Player {
    public HumanPlayer(){}

    @Override
    public Move makeMove(Board board){}
}
