package it.progettiS.entities;

public class Move {
}
