package it.progettiS.entities;

public class Player {
}
